<resources>
    <string name="app_name">Vẽ biểu đồ</string>
    <string name="action_settings">Cài đặt</string>
    <string name="action_open">Mở một project</string>
    <string name="action_new">Tạo một project</string>
    <string name="recent_projects">Các project đã tạo:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_chart_title">Chọn loại biểu đồ cần vẽ</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="statistic_title">Nhận xét biểu đồ</string>

    <string name="enter_chart_name">Nhập tên biểu đồ:</string>
    <string name="pie_chart">Biểu đồ tròn</string>
    <string name="enter_number_of_items">Số lượng đối tượng:</string>
    <string name="enter_items_group_name">Ý nghĩa các đối tượng:</string>
    <string name="enter_value_group_name">Ý nghĩa các giá trị:</string>
    <string name="create_project">Tạo project</string>
    <string name="add_chart">Tạo biểu đồ</string>
    <string name="enter_item_name">Nhập tên hạng mục</string>
    <string name="enter_description">Nhập mô tả cho hạng mục</string>
    <string name="line_chart">Biểu đồ đường</string>
    <string name="enter_x_axis_unit">Nhập đơn vị trục hoành</string>
    <string name="default_x_axis_unit">Năm</string>
    <string name="enter_y_axis_unit">Nhập đơn vị trục tung</string>
    <string name="default_y_axis_unit">Tấn</string>
    <string name="default_y_axis_unit_meaning">Sản lượng</string>

    <string name="enter_number_of_series">Nhập số lượng các mốc thời gian</string>
    <string name="enter_y_axis_unit_meaning">Nhập ý nghĩa đơn vị trục tung</string>
    <string name="enter_object_meaning">Nhập ý nghĩa các đối tượng</string>
    <string name="default_object_meaning">Nước</string>

    <string name="add_item">Thêm đối tượng</string>
    <string name="add_serie">Thêm giai đoạn</string>
    <string name="add_serial">Thêm giai đoạn</string>
    <string name="apply">Áp dụng</string>
    <string name="data_table">Bảng dữ liệu</string>
    <string name="create_chart">Tạo biểu đồ</string>
    <string name="create">Tạo</string>
    <string name="cancel">Hủy</string>
    <string name="enter_project_name">Nhập tên project</string>
    <string name="edit_item">Sửa hạng mục</string>
    <string name="delete">Xóa đối tượng này</string>
    <string name="default_group_name">Quốc gia</string>
    <string name="default_value_group_name">Tỉ lệ</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete_chart">Xóa biểu đồ</string>
    <string name="untitled_donut_chart">Untitled donut chart</string>
    <string name="describe">Nhận xét</string>
    <string name="enter_series_meaning">Nhập ý nghĩa của mốc thời gian:</string>
    <string name="default_donut_items_meaning">Cơ cấu</string>
    <string name="default_donut_series_meaning">Năm</string>
    <string name="statistic">Nhận xét biểu đồ</string>
    <string name="delete_project">Xóa project</string>
    <string name="create_project_dialog_title">Tạo project mới</string>
    <string name="projects_list_view_empty">CHƯA CÓ PROJECT NÀO</string>
    <string name="charts_list_view_empty">CHƯA CÓ BIỂU ĐỒ NÀO</string>
    <string name="share_chart_menu">Share</string>
    <string name="save_as_picture">Lưu ảnh</string>
    <string name="go_home">Về trang chủ</string>
    <string name="chart_list">Danh sách biểu đồ</string>
</resources>
