<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_chart"
        android:orderInCategory="100"
        android:title="@string/delete_chart"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/share_chart"
        android:orderInCategory="100"
        android:title="@string/share_chart_menu"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/save_chart_as_picture"
        android:orderInCategory="100"
        android:title="@string/save_as_picture"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/describe_chart"
        android:orderInCategory="100"
        android:title="@string/describe"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_chart"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="always" />


</menu>