<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreatePieChartDialogFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_chart_name"
                    android:layout_width="match_parent"
                    android:maxLength="30"
                    android:hint="@string/enter_chart_name"
                    android:text="Stacked Bar Chart"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/edt_x_axis_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_x_axis_unit"
                    android:text="@string/default_x_axis_unit" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/edt_y_axis_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_y_axis_unit"
                    android:text="@string/default_y_axis_unit" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/edt_y_axis_unit_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_y_axis_unit_meaning"
                    android:text="@string/default_y_axis_unit_meaning" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/edt_object_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_object_meaning"
                    android:text="@string/default_object_meaning" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_rows"
                    android:layout_width="match_parent"
                    android:hint="Số lượng phần tử mỗi group"
                    android:inputType="number"
                    android:text="3"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_cols"
                    android:layout_width="match_parent"
                    android:hint="Số lượng group"
                    android:inputType="number"
                    android:text="3"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>



</FrameLayout>